wording fix in shed

--- a/tools/arriba/.shed.yml
+++ b/tools/arriba/.shed.yml
@@ -11,7 +11,7 @@ remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/to
 type: unrestricted
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
-  description_template: "Wrapper for HiCExplorer: {{ tool_name }}"
+  description_template: "Wrapper for Arriba: {{ tool_name }}"
 suite:
   name: "suite_arriba"
   description: "A suite of Arriba fusion detection tools within Galaxy."
