--- a/tool_collections/samtools/samtools_coverage/.shed.yml
+++ b/tool_collections/samtools/samtools_coverage/.shed.yml
@@ -1,12 +1,11 @@
 categories:
 - SAM
 - Statistics
-description: Generate statistics for a BAM or SAM file
+description: Computes the depth at each position or region for a BAM file
 long_description: |
-  This tool runs the samtools stats command in the SAMtools toolkit,
-  collecting statistics from BAM files. The output can be visualized using plot-bamstats.
-name: samtools_stats
+  Computes the depth at each position or region and draws an ASCII-art histogram or tabulated text.
+name: samtools_coverage
 owner: devteam
 homepage_url: http://www.htslib.org/
-remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tool_collections/samtools/samtools_stats
+remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tool_collections/samtools/samtools_coverage
 type: unrestricted
