--- a/data_managers/data_manager_mothur_toolsuite/.shed.yml
+++ b/data_managers/data_manager_mothur_toolsuite/.shed.yml
@@ -5,6 +5,6 @@ homepage_url: https://github.com/galaxyproject/tools-iuc/
 long_description: |
     Download reference data for Mothur tools
 name: data_manager_mothur_toolsuite
-owner: rhpvorderman
+owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/data_managers/data_manager_mothur_toolsuite/
 type: unrestricted
