--- a/tools/bioext/.shed.yml
+++ b/tools/bioext/.shed.yml
@@ -5,7 +5,7 @@ remote_repository_url: https://github.com/davebx/bioext-gx/
 homepage_url: https://pypi.python.org/pypi/biopython-extensions/
 type: unrestricted
 categories:
- - Next Gen Mappers
+ - Tools
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
   description_template: "Galaxy wrapper for BioExt operation {{ tool_name }}."
