--- a/.gitignore
+++ b/.gitignore
@@ -63,9 +63,9 @@ target/
 *.swp
 .DS_Store
 
+# Tool test from planemo
 tool_test_output.html
 tool_test_output.json
 
-.DS_Store
-
-
+# Tool test from galaxy-language-server
+*_test_report.html
