--- a/tools/polyester/.shed.yml
+++ b/tools/polyester/.shed.yml
@@ -2,6 +2,7 @@ categories:
   - RNA
   - Transcriptomics
 homepage_url: https://github.com/alyssafrazee/polyester
+description: RNA-seq read simulator
 long_description: |
   Polyester is an R package designed to simulate RNA sequencing experiments with differential transcript expression.
   Given a set of annotated transcripts, Polyester will simulate the steps of an RNA-seq experiment (fragmentation, reverse-complementing, and sequencing) and produce files containing simulated RNA-seq reads.
