--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,13 +1,13 @@
 # See documentation here:
 # https://blog.github.com/2017-07-06-introducing-code-owners/
 
-tools/art/*                      @erasche
-tools/circos/*                   @erasche @shiltemann
-tools/jbrowse/*                  @erasche @abretaud
-tools/blastxml_to_gapped_gff3/*  @erasche
-tools/gff3_rebase/*              @erasche
-tools/jq/*                       @erasche
-tools/hmmer3/*                   @erasche
-tools/progressivemauve/*         @erasche
-tools/ncbi_entrez_eutils/*       @erasche
+tools/art/*                      @hexylena
+tools/circos/*                   @hexylena @shiltemann
+tools/jbrowse/*                  @hexylena @abretaud
+tools/blastxml_to_gapped_gff3/*  @hexylena
+tools/gff3_rebase/*              @hexylena
+tools/jq/*                       @hexylena
+tools/hmmer3/*                   @hexylena
+tools/progressivemauve/*         @hexylena
+tools/ncbi_entrez_eutils/*       @hexylena
 tools/mothur/*                   @shiltemann
