--- a/tools/homer/tool_data_table_conf.xml.sample
+++ b/tools/homer/tool_data_table_conf.xml.sample
@@ -1,8 +1,12 @@
-<?xml version="1.0"?>
 <tables>
-    <!-- Locations of reference fasta files -->
+    <!-- Locations of all fasta files under genome directory -->
     <table name="all_fasta" comment_char="#">
         <columns>value, dbkey, name, path</columns>
         <file path="tool-data/all_fasta.loc" />
+    </table>
+    <!-- Locations of preparsed genomes -->
+    <table name="homer_preparse" comment_char="#">
+        <columns>value, dbkey, mask, size, name, path</columns>
+        <file path="tool-data/homer_preparse.loc" />
     </table>
 </tables>
