--- a/tools/homer/tool_data_table_conf.xml.sample
+++ b/tools/homer/tool_data_table_conf.xml.sample
@@ -6,7 +6,7 @@
     </table>
     <!-- Locations of preparsed genomes -->
     <table name="homer_preparse" comment_char="#">
-        <columns>value, dbkey, mask, size, name, path</columns>
+        <columns>value, dbkey, mask, size, name, path, path_fasta</columns>
         <file path="tool-data/homer_preparse.loc" />
     </table>
 </tables>
