update shed for suite style

--- a/tools/homer/.shed.yml
+++ b/tools/homer/.shed.yml
@@ -14,3 +14,11 @@ name: data_manager_homer_preparse
 owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/homer
 type: unrestricted
+auto_tool_repositories:
+  name_template: "{{ tool_id }}"
+  description_template: "Wrapper for HOMER tool: {{ tool_name }}."
+suite:
+  name: "suite_homer"
+  description: "HOMER (Hypergeometric Optimization of Motif EnRichment) is a suite of tools for Motif Discovery and next-gen sequencing analysis."
+  type: repository_suite_definition
+
