--- a/data_managers/data_manager_selection_background/tool_data_table_conf.xml.sample
+++ b/data_managers/data_manager_selection_background/tool_data_table_conf.xml.sample
@@ -1,7 +1,7 @@
 <tables>
-    <!-- Locations of dbkeys and len files under genome directory -->
-    <table name="bealign_selection" comment_char="#">
+    <!-- Locations of background sequences for clade analysis -->
+    <table name="selection_background" comment_char="#">
         <columns>value, label, path</columns>
-        <file path="tool-data/bealign_selection.loc" />
+        <file path="tool-data/selection_background.loc" />
     </table>
 </tables>
