--- a/data_managers/data_manager_selection_background/tool_data_table_conf.xml.sample
+++ b/data_managers/data_manager_selection_background/tool_data_table_conf.xml.sample
@@ -1,6 +1,6 @@
 <tables>
     <!-- Locations of background sequences for clade analysis -->
-    <table name="selection_background" comment_char="#">
+    <table allow_duplicate_entries="False" name="selection_background" comment_char="#">
         <columns>value, label, path</columns>
         <file path="tool-data/selection_background.loc" />
     </table>
