updatinf instrain yml file (Typo)

--- a/tools/instrain/.shed.yml
+++ b/tools/instrain/.shed.yml
@@ -13,9 +13,9 @@ categories:
 - Metagenomics
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
-  description_template: "Wrapper for the humann tool suite: {{ tool_name }}"
+  description_template: "Wrapper for the inStrain tool suite: {{ tool_name }}"
 suite:
-  name: "suite_humann"
+  name: "suite_inStrain"
   description: "InStrain is a tool for analysis of co-occurring genome populations from metagenomes"
   long_description: |
      inStrain is python program for analysis of co-occurring genome populations from
