--- a/.github/workflows/slash.yaml
+++ b/.github/workflows/slash.yaml
@@ -11,5 +11,15 @@ jobs:
         uses: peter-evans/slash-command-dispatch@v2
         with:
           token: ${{ secrets.PAT }}
-          commands: |
-            run-all-tool-tests
+          config: >
+            [
+              {
+                "command": "run-all-tool-tests",
+                "issue_type": "issue"
+              }
+              {
+                "command": "update-test-data",
+                "permission": "write",
+                "issue_type": "pull-request"
+              }
+            ]
