--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -285,6 +285,15 @@ jobs:
         chunk: ${{ matrix.chunk }}
         chunk-count: ${{ needs.setup.outputs.chunk-count }}
         update-test-data: ${{ needs.setup.outputs.update-test-date }}
+    - name: Push updated test data
+      if: ${{ needs.setup.outputs.update-test-date }}
+      uses: actions/checkout@v2
+      run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "update test data"
+          git push 
     - uses: actions/upload-artifact@v2
       with:
         name: 'Tool test output ${{ matrix.chunk }}'
