PR: temp disable for push and PR

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,7 +1,7 @@
 name: Galaxy Tool Linting and Tests for push and PR
 on:
-  push:
-  pull_request:
+  # push:
+  # pull_request:
   repository_dispatch:
     types: [update-test-data-command]
 env:
