--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -31,7 +31,7 @@ jobs:
         python-version: ['3.7']
     steps:
     - name: Add reaction
-      if: ${{ github.event.client_payload.slash_command.command == 'run-all-tool-tests' }}
+      if: ${{ github.event.client_payload.slash_command.command == 'update-test-data' }}
       uses: peter-evans/create-or-update-comment@v1
       with:
         token: ${{ secrets.PAT }}
@@ -55,6 +55,7 @@ jobs:
         echo 'base_ref: ${{ github.base_ref }}'
         echo 'event.before: ${{ github.event.before }}'
         echo 'event.after: ${{ github.event.after }}'
+        echo 'github.event...: ${{ github.event.client_payload.pull_request }}'
     - name: Determine latest commit in the Galaxy repo
       id: get-galaxy-sha
       run: echo "::set-output name=galaxy-head-sha::$(git ls-remote https://github.com/${{ env.GALAXY_FORK }}/galaxy refs/heads/${{ env.GALAXY_BRANCH }} | cut -f1)"
