--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -55,10 +55,9 @@ jobs:
         echo 'base_ref: ${{ github.base_ref }}'
         echo 'event.before: ${{ github.event.before }}'
         echo 'event.after: ${{ github.event.after }}'
-        echo 'github.event...: ${{ toJson(github.event.client_payload) }}'
     - name: Dump the client payload context
       env:
-        PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload) }}
+        PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload.pull_request) }}
       run: echo "$PAYLOAD_CONTEXT"
     - name: Determine latest commit in the Galaxy repo
       id: get-galaxy-sha
