--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -30,6 +30,19 @@ jobs:
       matrix:
         python-version: ['3.7']
     steps:
+    - name: Print github context properties
+      run: |
+        echo 'event: ${{ github.event_name }}'
+        echo 'sha: ${{ github.sha }}'
+        echo 'ref: ${{ github.ref }}'
+        echo 'head_ref: ${{ github.head_ref }}'
+        echo 'base_ref: ${{ github.base_ref }}'
+        echo 'event.before: ${{ github.event.before }}'
+        echo 'event.after: ${{ github.event.after }}'
+    - name: Dump the client payload context
+      env:
+        PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload.pull_request["head"]["ref"]) }}
+      run: echo "$PAYLOAD_CONTEXT"
     - name: Add reaction
       if: ${{ github.event.client_payload.slash_command.command == 'update-test-data' }}
       uses: peter-evans/create-or-update-comment@v1
@@ -43,22 +56,11 @@ jobs:
       run: |
         if [ -n "${{ github.event.client_payload.slash_command.command}}" ]; then
           echo "::set-output name=update-test-data::true"
+          echo "::set-output name=ref::${{github.event.client_payload.pull_request["head"]["ref"]}}"
         else
           echo "::set-output name=update-test-data::false"
+          echo "::set-output name=ref::''"
         fi
-    - name: Print github context properties
-      run: |
-        echo 'event: ${{ github.event_name }}'
-        echo 'sha: ${{ github.sha }}'
-        echo 'ref: ${{ github.ref }}'
-        echo 'head_ref: ${{ github.head_ref }}'
-        echo 'base_ref: ${{ github.base_ref }}'
-        echo 'event.before: ${{ github.event.before }}'
-        echo 'event.after: ${{ github.event.after }}'
-    - name: Dump the client payload context
-      env:
-        PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload.pull_request) }}
-      run: echo "$PAYLOAD_CONTEXT"
     - name: Determine latest commit in the Galaxy repo
       id: get-galaxy-sha
       run: echo "::set-output name=galaxy-head-sha::$(git ls-remote https://github.com/${{ env.GALAXY_FORK }}/galaxy refs/heads/${{ env.GALAXY_BRANCH }} | cut -f1)"
@@ -87,7 +89,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Fake a Planemo run to update cache and determine commit range, repositories, and chunks
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: bernt-matthias/planemo-ci-action@topic/update-test-data
       id: discover
       with:
         create-cache: ${{ steps.cache-pip.outputs.cache-hit != 'true' || steps.cache-planemo.outputs.cache-hit != 'true' }}
