--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -41,7 +41,7 @@ jobs:
         echo 'event.after: ${{ github.event.after }}'
     - name: Dump the client payload context
       env:
-        PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload.pull_request["head"]["ref"]) }}
+        PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload.pull_request.head.ref) }}
       run: echo "$PAYLOAD_CONTEXT"
     - name: Add reaction
       if: ${{ github.event.client_payload.slash_command.command == 'update-test-data' }}
@@ -56,7 +56,7 @@ jobs:
       run: |
         if [ -n "${{ github.event.client_payload.slash_command.command}}" ]; then
           echo "::set-output name=update-test-data::true"
-          echo "::set-output name=ref::${{github.event.client_payload.pull_request["head"]["ref"]}}"
+          echo "::set-output name=ref::${{github.event.client_payload.pull_request.ref}}"
         else
           echo "::set-output name=update-test-data::false"
           echo "::set-output name=ref::''"
