--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -87,6 +87,7 @@ jobs:
       run: pip install flake8 flake8-import-order
     - uses: actions/checkout@v2
       with:
+        ref: ${{ steps.update-test-data.outputs.ref }}
         fetch-depth: 0
     - name: Fake a Planemo run to update cache and determine commit range, repositories, and chunks
       uses: bernt-matthias/planemo-ci-action@topic/update-test-data
