--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -56,7 +56,7 @@ jobs:
       run: |
         if [ -n "${{ github.event.client_payload.slash_command.command}}" ]; then
           echo "::set-output name=update-test-data::true"
-          echo "::set-output name=ref::${{github.event.client_payload.pull_request.ref}}"
+          echo "::set-output name=ref::${{github.event.client_payload.pull_request.sha}}"
         else
           echo "::set-output name=update-test-data::false"
           echo "::set-output name=ref::''"
