checkout the correct ref in all jobs

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -25,7 +25,8 @@ jobs:
       tool-list: ${{ steps.discover.outputs.tool-list }}
       chunk-count: ${{ steps.discover.outputs.chunk-count }}
       chunk-list: ${{ steps.discover.outputs.chunk-list }}
-      output-test-data: ${{ steps.output-test-data.outputs.output-test-data }}
+      output-test-data: ${{ steps.update-test-data.outputs.output-test-data }}
+      ref: ${{ steps.update-test-data.outputs.ref }}
     strategy:
       matrix:
         python-version: ['3.7']
@@ -43,7 +44,7 @@ jobs:
       env:
         PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload.pull_request.head.sha) }}
       run: echo "$PAYLOAD_CONTEXT"
-    - name: Add reaction
+    - name: Add reaction to update-test-data slash command
       if: ${{ github.event.client_payload.slash_command.command == 'update-test-data' }}
       uses: peter-evans/create-or-update-comment@v1
       with:
@@ -51,7 +52,10 @@ jobs:
         repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
         comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
         reaction-type: hooray
-    - name: Set update-test-data for slash commands
+    # for running the update-test-data slash command 
+    # - set update-test-data::true and false otherwise
+    # - set ref to the PR latest SHA and '' otherwise (which is the default for the checkout action)
+    - name: Set variables depending on update-test-data for slash commands
       id: update-test-data
       run: |
         if [ -n "${{ github.event.client_payload.slash_command.command}}" ]; then
@@ -124,6 +128,7 @@ jobs:
     # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
+        ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
       with:
@@ -160,6 +165,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
+        ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
       with:
@@ -192,6 +198,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
+        ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: r-lib/actions/setup-r@master
       with:
@@ -265,6 +272,7 @@ jobs:
     # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
+        ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
       with:
@@ -359,6 +367,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
+        ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
       with:
