always use branch of the action

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -140,7 +140,8 @@ jobs:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
     - name: Planemo lint
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: bernt-matthias/planemo-ci-action@topic/update-test-data
+      # uses: galaxyproject/planemo-ci-action@v1
       id: lint
       with:
         mode: lint
@@ -290,7 +291,8 @@ jobs:
         path: ~/.planemo
         key: planemo_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
     - name: Planemo test
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: bernt-matthias/planemo-ci-action@topic/update-test-data
+      # uses: galaxyproject/planemo-ci-action@v1
       id: test
       with:
         mode: test
@@ -340,7 +342,8 @@ jobs:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
     - name: Combine outputs
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: bernt-matthias/planemo-ci-action@topic/update-test-data
+      # uses: galaxyproject/planemo-ci-action@v1
       id: combine
       with:
         mode: combine
@@ -350,7 +353,8 @@ jobs:
         name: 'All tool test results'
         path: upload
     - name: Check outputs
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: bernt-matthias/planemo-ci-action@topic/update-test-data
+      # uses: galaxyproject/planemo-ci-action@v1
       id: check
       with:
         mode: check
@@ -379,7 +383,8 @@ jobs:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
     - name: Deploy on testtoolshed
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: bernt-matthias/planemo-ci-action@topic/update-test-data
+      # uses: galaxyproject/planemo-ci-action@v1
       with:
         mode: deploy
         repository-list: ${{ needs.setup.outputs.repository-list }}
@@ -387,7 +392,8 @@ jobs:
         shed-key: ${{ secrets.TTS_API_KEY }}
       continue-on-error: true
     - name: Deploy on toolshed
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: bernt-matthias/planemo-ci-action@topic/update-test-data
+      # uses: galaxyproject/planemo-ci-action@v1
       with:
         mode: deploy
         repository-list: ${{ needs.setup.outputs.repository-list }}
