try ref instead of sha

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -42,7 +42,7 @@ jobs:
         echo 'event.after: ${{ github.event.after }}'
     - name: Dump the client payload context
       env:
-        PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload.pull_request.head.sha) }}
+        PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload.pull_request.head.ref) }}
       run: echo "$PAYLOAD_CONTEXT"
     - name: Add reaction to update-test-data slash command
       if: ${{ github.event.client_payload.slash_command.command == 'update-test-data' }}
@@ -60,7 +60,7 @@ jobs:
       run: |
         if [ -n "${{ github.event.client_payload.slash_command.command}}" ]; then
           echo "::set-output name=update-test-data::true"
-          echo "::set-output name=ref::${{github.event.client_payload.pull_request.head.sha}}"
+          echo "::set-output name=ref::${{github.event.client_payload.pull_request.head.ref}}"
         else
           echo "::set-output name=update-test-data::false"
           echo "::set-output name=ref::''"
@@ -303,7 +303,7 @@ jobs:
         chunk-count: ${{ needs.setup.outputs.chunk-count }}
         update-test-data: ${{ needs.setup.outputs.update-test-date }}
     - name: Push updated test data
-      if: ${{ needs.setup.outputs.update-test-date }}
+      if: ${{ needs.setup.outputs.update-test-data }}
       run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
