--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -42,7 +42,7 @@ jobs:
         echo 'event.after: ${{ github.event.after }}'
     - name: Dump the client payload context
       env:
-        PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload.pull_request.head.ref) }}
+        PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload.pull_request) }}
       run: echo "$PAYLOAD_CONTEXT"
     - name: Add reaction to update-test-data slash command
       if: ${{ github.event.client_payload.slash_command.command == 'update-test-data' }}
@@ -305,11 +305,13 @@ jobs:
     - name: Push updated test data
       if: ${{ needs.setup.outputs.update-test-data }}
       run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add .
-          git commit -m "update test data"
-          git push 
+          if git diff --exit-code; then
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git add .
+            git commit -m "update test data"
+            git push 
+          fi
     - uses: actions/upload-artifact@v2
       with:
         name: 'Tool test output ${{ matrix.chunk }}'
