--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -26,6 +26,7 @@ jobs:
       chunk-count: ${{ steps.discover.outputs.chunk-count }}
       chunk-list: ${{ steps.discover.outputs.chunk-list }}
       output-test-data: ${{ steps.update-test-data.outputs.output-test-data }}
+      repository: ${{ steps.update-test-data.outputs.repository }}
       ref: ${{ steps.update-test-data.outputs.ref }}
     strategy:
       matrix:
@@ -60,9 +61,11 @@ jobs:
       run: |
         if [ -n "${{ github.event.client_payload.slash_command.command}}" ]; then
           echo "::set-output name=update-test-data::true"
+          echo "::set-output name=repository::${{github.event.client_payload.pull_request.head.repo.full_name}}"
           echo "::set-output name=ref::${{github.event.client_payload.pull_request.head.ref}}"
         else
           echo "::set-output name=update-test-data::false"
+          echo "::set-output name=repository::''"
           echo "::set-output name=ref::''"
         fi
     - name: Determine latest commit in the Galaxy repo
@@ -91,6 +94,7 @@ jobs:
       run: pip install flake8 flake8-import-order
     - uses: actions/checkout@v2
       with:
+        ref: ${{ steps.update-test-data.outputs.repository }}
         ref: ${{ steps.update-test-data.outputs.ref }}
         fetch-depth: 0
     - name: Fake a Planemo run to update cache and determine commit range, repositories, and chunks
@@ -128,6 +132,7 @@ jobs:
     # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
+        ref: ${{ needs.setup.outputs.repository }}
         ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
@@ -166,6 +171,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
+        ref: ${{ needs.setup.outputs.repository }}
         ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
@@ -199,6 +205,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
+        ref: ${{ needs.setup.outputs.repository }}
         ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: r-lib/actions/setup-r@master
@@ -273,6 +280,7 @@ jobs:
     # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
+        ref: ${{ needs.setup.outputs.repository }}
         ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
@@ -373,6 +381,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
+        ref: ${{ needs.setup.outputs.repository }}
         ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
