--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -94,7 +94,7 @@ jobs:
       run: pip install flake8 flake8-import-order
     - uses: actions/checkout@v2
       with:
-        ref: ${{ steps.update-test-data.outputs.repository }}
+        repository: ${{ steps.update-test-data.outputs.repository }}
         ref: ${{ steps.update-test-data.outputs.ref }}
         fetch-depth: 0
     - name: Fake a Planemo run to update cache and determine commit range, repositories, and chunks
@@ -132,7 +132,7 @@ jobs:
     # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
-        ref: ${{ needs.setup.outputs.repository }}
+        repository: ${{ needs.setup.outputs.repository }}
         ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
@@ -171,7 +171,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: ${{ needs.setup.outputs.repository }}
+        repository: ${{ needs.setup.outputs.repository }}
         ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
@@ -205,7 +205,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: ${{ needs.setup.outputs.repository }}
+        repository: ${{ needs.setup.outputs.repository }}
         ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: r-lib/actions/setup-r@master
@@ -280,7 +280,7 @@ jobs:
     # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
-        ref: ${{ needs.setup.outputs.repository }}
+        repository: ${{ needs.setup.outputs.repository }}
         ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
@@ -381,7 +381,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: ${{ needs.setup.outputs.repository }}
+        repository: ${{ needs.setup.outputs.repository }}
         ref: ${{ needs.setup.outputs.ref }}
         fetch-depth: 1
     - uses: actions/setup-python@v1
