fix variable name

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -25,7 +25,7 @@ jobs:
       tool-list: ${{ steps.discover.outputs.tool-list }}
       chunk-count: ${{ steps.discover.outputs.chunk-count }}
       chunk-list: ${{ steps.discover.outputs.chunk-list }}
-      output-test-data: ${{ steps.update-test-data.outputs.output-test-data }}
+      update-test-data: ${{ steps.update-test-data.outputs.update-test-data }}
       repository: ${{ steps.update-test-data.outputs.repository }}
       ref: ${{ steps.update-test-data.outputs.ref }}
     strategy:
@@ -55,7 +55,7 @@ jobs:
         reaction-type: hooray
     # for running the update-test-data slash command 
     # - set update-test-data::true and false otherwise
-    # - set ref to the PR latest SHA and '' otherwise (which is the default for the checkout action)
+    # - set repository / ref to the PR fork name / latest SHA and '' otherwise (which is the default for the checkout action)
     - name: Set variables depending on update-test-data for slash commands
       id: update-test-data
       run: |
@@ -309,7 +309,7 @@ jobs:
         galaxy-branch: ${{ env.GALAXY_BRANCH }}
         chunk: ${{ matrix.chunk }}
         chunk-count: ${{ needs.setup.outputs.chunk-count }}
-        update-test-data: ${{ needs.setup.outputs.update-test-date }}
+        update-test-data: ${{ needs.setup.outputs.update-test-data }}
     - name: Push updated test data
       if: ${{ needs.setup.outputs.update-test-data }}
       run: |
