try to commit only if modifying changes are piresent
add resonse comment

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -25,7 +25,7 @@ jobs:
       tool-list: ${{ steps.discover.outputs.tool-list }}
       chunk-count: ${{ steps.discover.outputs.chunk-count }}
       chunk-list: ${{ steps.discover.outputs.chunk-list }}
-      update-test-data: ${{ steps.update-test-data.outputs.update-test-data }}
+      output-test-data: ${{ steps.update-test-data.outputs.output-test-data }}
       repository: ${{ steps.update-test-data.outputs.repository }}
       ref: ${{ steps.update-test-data.outputs.ref }}
     strategy:
@@ -309,17 +309,36 @@ jobs:
         galaxy-branch: ${{ env.GALAXY_BRANCH }}
         chunk: ${{ matrix.chunk }}
         chunk-count: ${{ needs.setup.outputs.chunk-count }}
-        update-test-data: ${{ needs.setup.outputs.update-test-data }}
+        update-test-data: ${{ needs.setup.outputs.update-test-date }}
     - name: Push updated test data
+      id: push-updated-test-data
       if: ${{ needs.setup.outputs.update-test-data }}
       run: |
-          if git diff --exit-code; then
+          if git diff --diff-filter=M --exit-code; then
             git config user.name github-actions
             git config user.email github-actions@github.com
-            git add .
-            git commit -m "update test data"
+            git commit -m "update test data" .
             git push 
           fi
+    - name: Create URL to the run output
+      if: ${{ github.event.client_payload.slash_command.command == 'run-all-tool-tests' }}
+      id: vars
+      run: echo "::set-output name=run-url::https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
+    - name: Create comment
+      if: ${{ github.event.client_payload.slash_command.command == 'update-test-data' }}
+      uses: peter-evans/create-or-update-comment@v1
+      with:
+        token: ${{ secrets.PAT }}
+        repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
+        issue-number: ${{ github.event.client_payload.github.payload.issue.number }}
+        body: |
+          Summary:
+
+          ${{ toJson(steps.push-updated-test-data.outputs) }}
+
+          [Find all tool test results here][1]
+
+          [1]: ${{ steps.vars.outputs.run-url }}
     - uses: actions/upload-artifact@v2
       with:
         name: 'Tool test output ${{ matrix.chunk }}'
