--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -25,7 +25,7 @@ jobs:
       tool-list: ${{ steps.discover.outputs.tool-list }}
       chunk-count: ${{ steps.discover.outputs.chunk-count }}
       chunk-list: ${{ steps.discover.outputs.chunk-list }}
-      output-test-data: ${{ steps.update-test-data.outputs.output-test-data }}
+      update-test-data: ${{ steps.update-test-data.outputs.update-test-data }}
       repository: ${{ steps.update-test-data.outputs.repository }}
       ref: ${{ steps.update-test-data.outputs.ref }}
     strategy:
@@ -309,7 +309,7 @@ jobs:
         galaxy-branch: ${{ env.GALAXY_BRANCH }}
         chunk: ${{ matrix.chunk }}
         chunk-count: ${{ needs.setup.outputs.chunk-count }}
-        update-test-data: ${{ needs.setup.outputs.update-test-date }}
+        update-test-data: ${{ needs.setup.outputs.update-test-data }}
     - name: Push updated test data
       id: push-updated-test-data
       if: ${{ needs.setup.outputs.update-test-data }}
