--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -311,17 +311,21 @@ jobs:
         chunk-count: ${{ needs.setup.outputs.chunk-count }}
         update-test-data: ${{ needs.setup.outputs.update-test-data }}
     - name: Push updated test data
-      id: push-updated-test-data
       if: ${{ needs.setup.outputs.update-test-data }}
+      id: push-updated-test-data
       run: |
-          if git diff --diff-filter=M --exit-code; then
+          set -x
+          if git diff HEAD^..HEAD --diff-filter=M --exit-code; then
             git config user.name github-actions
             git config user.email github-actions@github.com
             git commit -m "update test data" .
-            git push 
+            git push
+            echo "::set-output name=number-of-changed-files::$(git diff HEAD^..HEAD --name-only | wc -l)"
+          else
+            echo "::set-output name=number-of-changed-files::0"
           fi
     - name: Create URL to the run output
-      if: ${{ github.event.client_payload.slash_command.command == 'run-all-tool-tests' }}
+      if: ${{ github.event.client_payload.slash_command.command == 'update-test-data' }}
       id: vars
       run: echo "::set-output name=run-url::https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
     - name: Create comment
@@ -332,9 +336,7 @@ jobs:
         repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
         issue-number: ${{ github.event.client_payload.github.payload.issue.number }}
         body: |
-          Summary:
-
-          ${{ toJson(steps.push-updated-test-data.outputs) }}
+          Summary: ${{ steps.push-updated-test-data.outputs.number-of-changed-files }} files changed
 
           [Find all tool test results here][1]
 
