--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -315,7 +315,7 @@ jobs:
       id: push-updated-test-data
       run: |
           set -x
-          if git diff --diff-filter=M --exit-code; then
+          if ! git diff --diff-filter=M --exit-code >& /dev/null; then
             git config user.name github-actions
             git config user.email github-actions@github.com
             git commit -m "update test data" .
