Cancel in-progress GitHub workflows when a PR is updated

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -4,6 +4,9 @@ env:
   GALAXY_FORK: galaxyproject
   GALAXY_BRANCH: release_21.05
   MAX_CHUNKS: 4
+concurrency:
+  group: pr-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   # the setup job does two things:
   # 1. cache the pip cache and .planemo
