--- a/tools/amplican/.shed.yml
+++ b/tools/amplican/.shed.yml
@@ -1,13 +1,15 @@
 categories:
-- Variant Analysis
-description: Beagle is a program for phasing and imputing missing genotypes. 
+- Sequence Analysis
+description: Beagle is an analysis tool for genome editing. 
 long_description: |
-   Beagle is a program for phasing and imputing missing genotypes. Sporadic missing
-   genotypes are imputed during phasing. If a reference panel of phased genotypes is specified
-   with the ref argument, ungenotyped markers that are present in the reference panel can also
-   be imputed.
-name: beagle
+   Beagle is an analysis tool for genome editing that unites 
+   highly precise quantification and visualization of genuine 
+   genome editing events. ampliCan features nuclease-optimized 
+   alignments, filtering of experimental artifacts, event-specific 
+   normalization, and off-target read detection and quantifies 
+   insertions, deletions, HDR repair, as well as targeted base editing.
+name: amplican
 owner: iuc
-remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/beagle
-homepage_url: https://faculty.washington.edu/browning/beagle/beagle.html
+remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/amplican
+homepage_url: https://github.com/valenlab/amplican
 type: unrestricted
