Modify .shed file

--- a/tools/amplican/.shed.yml
+++ b/tools/amplican/.shed.yml
@@ -1,8 +1,8 @@
 categories:
 - Sequence Analysis
-description: Beagle is an analysis tool for genome editing. 
+description: AmpliCan is an analysis tool for genome editing. 
 long_description: |
-   Beagle is an analysis tool for genome editing that unites 
+   AmpliCan is an analysis tool for genome editing that unites 
    highly precise quantification and visualization of genuine 
    genome editing events. ampliCan features nuclease-optimized 
    alignments, filtering of experimental artifacts, event-specific 
