Update .shed.yml file

--- a/tools/bwa_mem2/.shed.yml
+++ b/tools/bwa_mem2/.shed.yml
@@ -1,10 +1,12 @@
 categories:
 - Next Gen Mappers
-description: 'Wrapper for bwa mem, aln, sampe, and samse'
+description: Bwa-mem2 is the next version of the bwa-mem algorithm in bwa. 
 long_description: |
-  A collection of Galaxy bwa wrappers based on version 0.7.17.
-name: bwa
+  Bwa-mem2 is the next version of the bwa-mem algorithm in bwa. It produces 
+  alignment identical to bwa and is ~1.3-3.1x faster depending on the use-case, 
+  dataset and the running machine.
+name: bwa_mem2
 owner: devteam
-remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/bwa
-homepage_url: http://bio-bwa.sourceforge.net/
+remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/bwa_mem2
+homepage_url: https://github.com/bwa-mem2/bwa-mem2
 type: unrestricted
