--- a/tools/bwa_mem2/.shed.yml
+++ b/tools/bwa_mem2/.shed.yml
@@ -6,7 +6,7 @@ long_description: |
   alignment identical to bwa and is ~1.3-3.1x faster depending on the use-case, 
   dataset and the running machine.
 name: bwa_mem2
-owner: devteam
+owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/bwa_mem2
 homepage_url: https://github.com/bwa-mem2/bwa-mem2
 type: unrestricted
