--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ env:
 jobs:
   setup:
     name: Setup cache and determine changed repositories
-    if: github.repository_owner == 'galaxyproject'
+    # if: github.repository_owner == 'galaxyproject'
     runs-on: ubuntu-latest
     outputs:
       galaxy-head-sha: ${{ steps.get-galaxy-sha.outputs.galaxy-head-sha }}
@@ -114,6 +114,7 @@ jobs:
       id: test
       with:
         mode: test
+        planemo-version: https://github.com/bernt-matthias/planemo/archive/refs/heads/topic/extra_files.zip
         repository-list: ${{ needs.setup.outputs.repository-list }}
         galaxy-fork: ${{ needs.setup.outputs.fork }}
         galaxy-branch: ${{ needs.setup.outputs.branch }}
