--- a/tools/ragtag/.shed.yml
+++ b/tools/ragtag/.shed.yml
@@ -1,13 +1,12 @@
 categories:
-- Variant Analysis
-description: Beagle is a program for phasing and imputing missing genotypes. 
+- Assembly
+description: Reference-guided scaffolding of draft genomes tool. 
 long_description: |
-   Beagle is a program for phasing and imputing missing genotypes. Sporadic missing
-   genotypes are imputed during phasing. If a reference panel of phased genotypes is specified
-   with the ref argument, ungenotyped markers that are present in the reference panel can also
-   be imputed.
-name: beagle
+   RagTag is a collection of software tools for scaffolding and improving modern genome 
+   assemblies. Task include homology-based misassembly correction, homology-based assembly
+   scaffolding and patching, and scaffold merging.
+name: ragtag
 owner: iuc
-remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/beagle
-homepage_url: https://faculty.washington.edu/browning/beagle/beagle.html
+remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/ragtag
+homepage_url: https://github.com/malonge/RagTag
 type: unrestricted
