--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -229,7 +229,7 @@ jobs:
         fetch-depth: 1
     - name: Save repositories to file
       run: echo '${{ needs.setup.outputs.repository-list }}' > repository_list.txt
-    - name: lintr
+    - name: Check file sizes
       run: |
         while read repo; do
           find "$repo" -size +${{ env.MAX_FILE_SIZE }}
