Apply suggestions from code review
Co-authored-by: Nicola Soranzo <nicola.soranzo@gmail.com>

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -216,7 +216,7 @@ jobs:
         name: 'R linting output'
         path: rlint_report.txt
 
-  sizes:
+  file_sizes:
     name: Check file sizes
     needs: setup
     if: ${{ needs.setup.outputs.repository-list != '' }}
@@ -384,7 +384,7 @@ jobs:
 
   determine-success:
     name: Check workflow success
-    needs: [setup, lint, flake8, lintr, sizes, combine_outputs]
+    needs: [setup, lint, flake8, lintr, file_sizes, combine_outputs]
     if: ${{ always() && github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
     runs-on: ubuntu-latest
     steps:
@@ -398,7 +398,7 @@ jobs:
       if: ${{ needs.lintr.result != 'success' && needs.lintr.result != 'skipped' }}
       run: exit 1
     - name: Indicate file size status
-      if: ${{ needs.sizes.result != 'success' && needs.sizes.result != 'skipped' }}
+      if: ${{ needs.file_sizes.result != 'success' && needs.file_sizes.result != 'skipped' }}
       run: exit 1
     - name: Check tool test status
       if: ${{ needs.combine_outputs.result != 'success' && needs.combine_outputs.result != 'skipped' }}
