add comment in case of size violation

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -244,7 +244,18 @@ jobs:
       with:
         name: 'File size report'
         path: file_size_report.txt
-
+    - name: PR Comment
+      uses: actions/github-script@v2
+      with:
+        github-token: ${{ secrets.PAT }}
+        script: |
+          github.issues.createComment({
+            issue_number: ${{ github.event.number }},
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: ':warning: Some files in this PR are large. Try to reduce the size, e.g. by using content assertions.'
+          })
+  
   # Planemo test the changed repositories, each chunk creates an artifact
   # containing HTML and JSON reports for the executed tests
   test:
