--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -251,7 +251,7 @@ jobs:
         github-token: ${{ secrets.PAT }}
         script: |
           github.rest.issues.createComment({
-            issue_number: ${{ github.event.number }},
+            issue_number: github.event.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
             body: ':warning: Some files in this PR are large. Try to reduce the size, e.g. by using content assertions.'
