--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -244,18 +244,12 @@ jobs:
       with:
         name: 'File size report'
         path: file_size_report.txt
-    - name: PR Comment
+    - name: Comment PR
       if: ${{ failure() }}
-      uses: actions/github-script@v5
+      uses: thollander/actions-comment-pull-request@v1
       with:
-        github-token: ${{ secrets.PAT }}
-        script: |
-          github.rest.issues.createComment({
-            issue_number: github.event.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: ':warning: Some files in this PR are large. Try to reduce the size, e.g. by using content assertions.'
-          })
+        message: ':warning: Some files in this PR are large. Try to reduce the size, e.g. by using content assertions.'
+        GITHUB_TOKEN: ${{ secrets.PAT }}
 
   # Planemo test the changed repositories, each chunk creates an artifact
   # containing HTML and JSON reports for the executed tests
