Apply suggestions from code review
Co-authored-by: Nicola Soranzo <nicola.soranzo@gmail.com>

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -219,7 +219,7 @@ jobs:
   file_sizes:
     name: Check file sizes
     needs: setup
-    if: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' && needs.setup.outputs.repository-list != '' }}
+    if: ${{ github.event_name == 'pull_request' && needs.setup.outputs.repository-list != '' }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
