--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -246,10 +246,12 @@ jobs:
         path: file_size_report.txt
     - name: Comment PR
       if: ${{ failure() }}
-      uses: thollander/actions-comment-pull-request@v1
+      uses: peter-evans/create-or-update-comment@v1
       with:
-        message: ':warning: Some files in this PR are large. Try to reduce the size, e.g. by using content assertions.'
-        GITHUB_TOKEN: ${{ secrets.PAT }}
+        token: ${{ secrets.PAT }}
+        repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
+        issue-number: ${{ github.event.pull_request.number }}
+        body: ':warning: Some files in this PR are large. Try to reduce the size, e.g. by using content assertions.'
 
   # Planemo test the changed repositories, each chunk creates an artifact
   # containing HTML and JSON reports for the executed tests
