--- a/tools/tracy/.shed.yml
+++ b/tools/tracy/.shed.yml
@@ -1,5 +1,7 @@
 owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/tracy
+section:
+  Sequence Analysis
 type: unrestricted
 
 auto_tool_repositories:
