check for potentially unused test data files

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -234,13 +234,32 @@ jobs:
         if [[ -s file_size_report.txt ]]; then
           echo "Files larger than ${{ env.MAX_FILE_SIZE }} found"
           cat file_size_report.txt
+        fi
+    - name: Check for unused files in test data
+      run: |
+        while read repo; do
+          for file in $(find $repo/test-data -type f)
+          do
+            b=$(echo $file | sed "s@$repo/test-data/@@");
+            if ! grep -q $b $repo/ -r ; then
+              echo "$file";
+            fi
+          done
+        done < repository_list.txt > file_unused_report.txt
+        if [[ -s file_unused_report.txt ]]; then
+          echo "Potentially unused files found"
+          cat file_unused_report.txt
+        fi
+    - name: Check success
+      run: |
+        if [[ -s file_size_report.txt ]] || [[ -s file_unused_report.txt ]]; then
           exit 1
         fi
     - uses: actions/upload-artifact@v2
       if: ${{ failure() }}
       with:
-        name: 'File size report'
-        path: file_size_report.txt
+        name: 'File size and unused files report'
+        path: file_*_report.txt
 
   # Planemo test the changed repositories, each chunk creates an artifact
   # containing HTML and JSON reports for the executed tests
