Exclude test-data from toolshed upload

--- a/tools/arriba/.shed.yml
+++ b/tools/arriba/.shed.yml
@@ -24,4 +24,14 @@ suite:
   name: "suite_arriba"
   description: "A suite of Galaxy tools to predict gene fusions from STAR aligned RNAseq data"
   type: repository_suite_definition
-
+exclude:
+  - test-data/Aligned.out.sam
+  - test-data/arriba_indexes.loc
+  - test-data/cytobands.tsv
+  - test-data/fusions.tsv
+  - test-data/genome.fasta
+  - test-data/genome.gtf
+  - test-data/protein_domains.gff3
+  - test-data/read1.fastq.gz
+  - test-data/read2.fastq.gz
+  - test-data/STAR_index
