check file sizes only for changed files
as pointed out here: https://github.com/galaxyproject/tools-iuc/pull/3973#issuecomment-944247753

reducing the size of test data does not decrease the repo size
if the files are already in. so we should only check for the sizes
of changed files and be strict with them

this also splits the job into two: one for the file size check
and one for finding potentially unused test data files

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -234,7 +234,27 @@ jobs:
         if [[ -s file_size_report.txt ]]; then
           echo "Files larger than ${{ env.MAX_FILE_SIZE }} found"
           cat file_size_report.txt
+          exit 1
         fi
+    - uses: actions/upload-artifact@v2
+      if: ${{ failure() }}
+      with:
+        name: 'File size and unused files report'
+        path: file_size_report.txt
+
+  unused_test_data:
+    name: Check for unused test data files
+    needs: setup
+    if: ${{ github.event_name == 'pull_request' && needs.setup.outputs.repository-list != '' }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 1
+    - name: Save repositories to file
+      run: echo '${{ needs.setup.outputs.repository-list }}' > repository_list.txt
     - name: Check for unused files in test data
       run: |
         while read repo; do
@@ -249,17 +269,13 @@ jobs:
         if [[ -s file_unused_report.txt ]]; then
           echo "Potentially unused files found"
           cat file_unused_report.txt
-        fi
-    - name: Check success
-      run: |
-        if [[ -s file_size_report.txt ]] || [[ -s file_unused_report.txt ]]; then
           exit 1
         fi
     - uses: actions/upload-artifact@v2
       if: ${{ failure() }}
       with:
-        name: 'File size and unused files report'
-        path: file_*_report.txt
+        name: 'Unused files report'
+        path: file_unused_report.txt
 
   # Planemo test the changed repositories, each chunk creates an artifact
   # containing HTML and JSON reports for the executed tests
