--- a/tools/bwa_mem2/tool_data_table_conf.xml.sample
+++ b/tools/bwa_mem2/tool_data_table_conf.xml.sample
@@ -3,6 +3,6 @@
     <!-- Locations of indexes in the BWA-MEM2 mapper format-->
     <table name="bwa_mem2_indexes" comment_char="#">
         <columns>value, dbkey, name, path</columns>
-        <file path="tool-data/bwa_mem_index.loc" />
+        <file path="tool-data/bwa_mem2_index.loc" />
     </table>
 </tables>
