raise lint error level to warn

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -119,6 +119,7 @@ jobs:
         mode: lint
         repository-list: ${{ needs.setup.outputs.repository-list }}
         tool-list: ${{ needs.setup.outputs.tool-list }}
+        fail_level: warn
     - uses: actions/upload-artifact@v2
       if: ${{ failure() }}
       with:
