--- a/tools/maaslin2/.shed.yml
+++ b/tools/maaslin2/.shed.yml
@@ -9,7 +9,7 @@ long_description: |
 remote_repository_url: https://github.com/biobakery/Maaslin2
 type: unrestricted
 categories:
-- Microbiome
+  - Metagenomics
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
   description_template: "Wrapper for the masslin tool suite: {{ tool_name }}"
