--- a/tools/hypo/.shed.yml
+++ b/tools/hypo/.shed.yml
@@ -2,7 +2,7 @@ categories:
   - Assembly
 description: Super Fast & Accurate Polisher for Long Read Genome Assemblies
 long_description: |
-  HyPo, a Hybrid Polisher, utilises short as well as long reads within a single run to polish a long reads assembly of small and large genomes.
+  HyPo, a Hybrid Polisher, utilizes short as well as long reads within a single run to polish a long reads assembly of small and large genomes.
 homepage_url: https://github.com/kensung-lab/hypo
 name: hypo
 owner: iuc
