--- a/tools/roary/.shed.yml
+++ b/tools/roary/.shed.yml
@@ -6,5 +6,5 @@ long_description: |
 name: roary
 owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/roary
-homepage_url: https://toolshed.g2.bx.psu.edu/view/iuc/roary
+homepage_url: https://sanger-pathogens.github.io/Roary/
 type: unrestricted
