Misc review changes

--- a/tools/megan/.shed.yml
+++ b/tools/megan/.shed.yml
@@ -10,7 +10,7 @@ long_description: |
 categories:
 - Sequence Analysis
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/megan
-homepage_url: 'https://github.com/husonlab/megan-ce'
+homepage_url: https://github.com/husonlab/megan-ce
 type: unrestricted
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
