only check added files
otherwise find fails for deleted files

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -230,7 +230,7 @@ jobs:
         fetch-depth: 0
     - name: Check file sizes
       run: |
-        find $(git diff --name-only ${{ needs.setup.outputs.commit-range }}) -type f -size +${{ env.MAX_FILE_SIZE }} > file_size_report.txt
+        find $(git diff --diff-filter A --name-only ${{ needs.setup.outputs.commit-range }}) -type f -size +${{ env.MAX_FILE_SIZE }} > file_size_report.txt
         if [[ -s file_size_report.txt ]]; then
           echo "Files larger than ${{ env.MAX_FILE_SIZE }} found"
           cat file_size_report.txt
