add missing adaptions to new alignandseqdb column

--- a/data_managers/data_manager_mothur_toolsuite/tool-data/mothur_alignandseqdb.loc.sample
+++ b/data_managers/data_manager_mothur_toolsuite/tool-data/mothur_alignandseqdb.loc.sample
@@ -8,16 +8,16 @@
 #
 #- dbname: the name shown im the Galaxy UI
 #- file_base: the path to the file
-#- type: seq/align depending if the file contains unaligned or aligned data
+#- aligned: True/False depending if the file contains unaligned or aligned data
 #
-#greengenes	/project/db/galaxy/mothur/core_set_aligned.imputed.fasta	seq
-#silva archaea	/project/db/galaxy/mothur/Silva.archaea/silva.archaea.fasta	seq
-#silva bacteria	/project/db/galaxy/mothur/silva.bacteria/silva.bacteria.fasta	seq
-#silva eukarya	/project/db/galaxy/mothur/silva.eukarya.fasta	seq
-#silva archaea nogap	/project/db/galaxy/mothur/Silva.archaea/nogap.archaea.fasta	seq
-#silva bacteria nogap	/project/db/galaxy/mothur/silva.bacteria/nogap.bacteria.fasta	seq
-#silva eukarya nogap	/project/db/galaxy/mothur/nogap.eukarya.fasta	seq
-#FungiLSU_train_1400bp_8506_mod.fasta	/project/db/galaxy/mothur/RDP/FungiLSU_train_1400bp_8506_mod.fasta	seq
-#trainset6_032010.rdp.fasta	/project/db/galaxy/mothur/RDP/trainset6_032010.rdp.fasta	seq
-#trainset7_112011.pds.fasta	/project/db/galaxy/mothur/RDP/trainset7_112011.pds.fasta	seq
-#trainset7_112011.rdp.fasta	/project/db/galaxy/mothur/RDP/trainset7_112011.rdp.fasta	seq
+#greengenes	/project/db/galaxy/mothur/core_set_aligned.imputed.fasta	False
+#silva archaea	/project/db/galaxy/mothur/Silva.archaea/silva.archaea.fasta	False
+#silva bacteria	/project/db/galaxy/mothur/silva.bacteria/silva.bacteria.fasta	False
+#silva eukarya	/project/db/galaxy/mothur/silva.eukarya.fasta	False
+#silva archaea nogap	/project/db/galaxy/mothur/Silva.archaea/nogap.archaea.fasta	False
+#silva bacteria nogap	/project/db/galaxy/mothur/silva.bacteria/nogap.bacteria.fasta	False
+#silva eukarya nogap	/project/db/galaxy/mothur/nogap.eukarya.fasta	False
+#FungiLSU_train_1400bp_8506_mod.fasta	/project/db/galaxy/mothur/RDP/FungiLSU_train_1400bp_8506_mod.fasta	False
+#trainset6_032010.rdp.fasta	/project/db/galaxy/mothur/RDP/trainset6_032010.rdp.fasta	False
+#trainset7_112011.pds.fasta	/project/db/galaxy/mothur/RDP/trainset7_112011.pds.fasta	False
+#trainset7_112011.rdp.fasta	/project/db/galaxy/mothur/RDP/trainset7_112011.rdp.fasta	False
