--- a/tools/mothur/tool_data_table_conf.xml.sample
+++ b/tools/mothur/tool_data_table_conf.xml.sample
@@ -1,6 +1,6 @@
 <tables>
   <table name="mothur_alignandseqdb" comment_char="#" allow_duplicate_entries="False">
-    <columns>name, value</columns>
+    <columns>name, value, aligned</columns>
     <file path="tool-data/mothur_alignandseqdb.loc" />
   </table>
   <table name="mothur_lookup" comment_char="#" allow_duplicate_entries="False">
