replace new line

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -231,7 +231,8 @@ jobs:
     - name: Check file sizes
       run: |
         touch file_size_report.txt
-        GITDIFF=$(git diff --diff-filter=d --name-only ${{ needs.setup.outputs.commit-range }})
+        GITDIFF=$(git diff --diff-filter=d --name-only ${{ needs.setup.outputs.commit-range }} | tr '\n' ' ')
+        echo GITDIFF "$GITDIFF"
         if [ -n "$GITDIFF" ]; then
           find "$GITDIFF" -type f -size +${{ env.MAX_FILE_SIZE }} > file_size_report.txt
         fi
