try to save git diff to file

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -231,11 +231,10 @@ jobs:
     - name: Check file sizes
       run: |
         touch file_size_report.txt
-        GITDIFF=$(git diff --diff-filter=d --name-only ${{ needs.setup.outputs.commit-range }} | tr '\n' ' ')
-        echo GITDIFF "$GITDIFF"
-        if [ -n "$GITDIFF" ]; then
-          find "$GITDIFF" -type f -size +${{ env.MAX_FILE_SIZE }} > file_size_report.txt
-        fi
+        git diff --diff-filter=d --name-only ${{ needs.setup.outputs.commit-range }} > git.diff
+        while read line; do
+          find "$line" -type f -size +${{ env.MAX_FILE_SIZE }} >> file_size_report.txt
+        done < git.diff
         if [[ -s file_size_report.txt ]]; then
           echo "Files larger than ${{ env.MAX_FILE_SIZE }} found"
           cat file_size_report.txt
