add iuc as owner

--- a/tools/rpextractsink/.shed.yml
+++ b/tools/rpextractsink/.shed.yml
@@ -8,4 +8,4 @@ long_description: 'Sink refers to the collection of chemical species used by the
   its MIRIAM annotation to find their InChI structures. Source code may be found at
   the following location: https://github.com/brsynth/rptools/tree/master/rptools/rpextractsink'
 name: rpextractsink
-owner: tduigou
+owner: iuc
