--- a/tools/ngs-qc/.shed.yml
+++ b/tools/ngs-qc/.shed.yml
@@ -8,7 +8,7 @@ long_description: |
   Specifically, the total and uniquely aligned mapped reads (TMRs) are randomly sampled at three different densities; namely 90%, 70% and 50% (described here as s90, s70 and s50 respectively).
   Then, the genome-wide distribution of the sampled reads population is evaluated in the context of 500bp bins covering the genome of interest.
 name: ngs-qc
-owner: sysfate
+owner: iuc
 remote_repository_url: https://github.com/SysFate/tools-iuc/tree/master/tools/ngs-qc
 homepage_url: https://ngsqc.org/
 type: unrestricted
