fix(shed): fix owner name

--- a/tools/rpfba/.shed.yml
+++ b/tools/rpfba/.shed.yml
@@ -17,5 +17,5 @@ long_description: 'Perform FBA on a single or collection of SBML files containin
   uses the FBC package (https://co.mbine.org/specifications/sbml.level-3.version-1.fbc.version-2.release-1)
   to manage the objective and flux bounds.'
 name: rpfba
-owner: tduigou
+owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/rpfba
