Add additional information

--- a/tools/spades/.shed.yml
+++ b/tools/spades/.shed.yml
@@ -96,4 +96,5 @@ suite:
   name: "suite_spades"
   description: "SPAdes - St. Petersburg genome assembler - is an assembly toolkit containing various assembly pipelines."
   long_description: |
-    metaSPAdes is a pipeline for metagenomic data sets. plasmidSPAdes is a pipeline for extracting and assembling plasmids from WGS data sets. metaplasmidSPAdes is a pipeline for extracting and assembling plasmids from metagenomic data sets. rnaSPAdes is a de novo transcriptome assembler from RNA-Seq data. truSPAdes is a module for TruSeq barcode assembly. biosyntheticSPAdes is a module for biosynthetic gene cluster assembly with paired-end reads.
+    metaSPAdes is a pipeline for metagenomic data sets. plasmidSPAdes is a pipeline for extracting and assembling plasmids from WGS data sets. metaplasmidSPAdes is a pipeline for extracting and assembling plasmids from metagenomic data sets. rnaSPAdes is a de novo transcriptome assembler from RNA-Seq data. truSPAdes is a module for TruSeq barcode assembly. biosyntheticSPAdes is a module for biosynthetic gene cluster assembly with paired-end reads. coronaSPAdes is a tool for de novo SARS-CoV-2 genome assembly. rnaviralSPAdes is a pipeline specially designed for de novo assembler tailored for RNA viral da\
+tasets (transcriptome, metatranscriptome and metavirome).
